<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:textColor="#000000"
        android:textSize="15sp"
        android:singleLine="true"
        android:text="@string/itemName" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>

    <TextView
        android:id="@+id/text_category"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:textColor="#000000"
        android:textSize="15sp"
        android:singleLine="true"
        android:text="@string/category" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>

    <TextView
        android:id="@+id/text_qty"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:textColor="#000000"
        android:textSize="15sp"
        android:singleLine="true"
        android:gravity="center"
        android:text="@string/Qty"/>

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>

    <TextView
        android:id="@+id/text_safety_qty"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingBottom="10dip"
        android:textColor="#000000"
        android:paddingTop="10dip"
        android:singleLine="true"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/safetyQty" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>

    <TextView
        android:id="@+id/text_item_unit"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingBottom="10dip"
        android:textColor="#000000"
        android:textSize="15sp"
        android:singleLine="true"
        android:paddingTop="10dip"
        android:gravity="center"
        android:text="@string/unit"/>

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>


</LinearLayout>