<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewItems">

    <include
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/title"
        android:text="Stationery Catalogue"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp">

        <SearchView
            android:id="@+id/search_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:inputType="textFilter"
            android:queryHint="Search by item name"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#B4B3B3"/>

    <LinearLayout
        android:layout_width="match_parent"
        style="@style/list_view"
        >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            style="@style/listHeader"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/itemName"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <View
            android:layout_width="1.5dip"
            android:layout_height="fill_parent"
            android:background="#B4B3B3"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            style="@style/listHeader"
            android:gravity="center"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <View
            android:layout_width="1.5dip"
            android:layout_height="fill_parent"
            android:background="#B4B3B3"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/listHeader"
            android:gravity="center"
            android:text="@string/Qty"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <View
            android:layout_width="1.5dip"
            android:layout_height="fill_parent"
            android:background="#B4B3B3"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="2"
            style="@style/listHeader"
            android:gravity="center"
            android:text="Reorder Level"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <View
            android:layout_width="1.5dip"
            android:layout_height="fill_parent"
            android:background="#B4B3B3"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            style="@style/listHeader"
            android:text="@string/unit"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#B4B3B3"/>

    <ListView
        android:id="@+id/lv_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:cacheColorHint="@android:color/transparent"
        android:divider="#B4B3B3"
        android:dividerHeight="1.0dip"
        android:fadingEdge="none"
        android:scrollbars="none"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#B4B3B3"/>


</LinearLayout>